# GPS-aided-VINS-Mono-for-autunomous-driving

./: README.md  vins_result_loop.txt  vins_result_no_loop.csv
benchmark_publisher/: CMakeLists.txt
benchmark_publisher/src/: benchmark_publisher_node.cpp
camera_model/: CMakeLists.txt
camera_model/src/: intrinsic_calib.cc
camera_model/src/calib/: CameraCalibration.cc
config/euroc/: kitti.yaml  thu.yaml  ubannav_config.yaml  ucb.yaml
feature_tracker/src/: feature_tracker.cpp  feature_tracker_node.cpp
global_optimize/: CMakeLists.txt  package.xml
global_optimize/src/: Factors.h  globalOpt.cpp  globalOpt.h  globalOptNode.cpp
path_recorder/: VINS_path.csv  VINS_path.txt  fuck.cpp  global_optimize.csv  global_optimize.txt  global_optimize_new.csv  global_optimize_new.txt  ground_truth.csv  ground_truth.txt  ground_truth_new.txt  vins_result_loop.txt
pose_graph/: CMakeLists.txt
pose_graph/src/: pose_graph.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: kitti.launch  thu.launch  ubannav.launch  ucb.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp
vins_estimator/src/initial/: initial_aligment.cpp
vins_estimator/src/utility/: visualization.cpp
